End of Session 2

--- a/NZWalks6/NZWalks6.API/appsettings.json
+++ b/NZWalks6/NZWalks6.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NZWalk": "server=localhost;database=NZWalksDb6Admin;Trusted_Connection=true"
+  }
 }
